tests/negative/unknown_ident.sp
// EXPECT: E2013
int main() {
    return undeclared_variable + 1;
}
